--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -69,7 +69,7 @@ hr {
 
 @font-face {
   font-family: 'Livingst';
-  src: url('/assets/Livingst.ttf') format('truetype');
+  src: url(font_path('Livingst.ttf')) format('truetype');
   font-weight: normal;
   font-style: normal;
 }
